--- a/01 - Object and Data Structure Basics/08 - Booleans and NoneType.ipynb
+++ b/01 - Object and Data Structure Basics/08 - Booleans and NoneType.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "## Booleans\n",
     "\n",
-    "- Booleans are operators that allow you to convey <b>True</b> or <b>False</b> statemant\n",
-    "- It also has a placeholder object called None."
+    "- Booleans are operators that allow you to convey <b>True</b> or <b>False</b> statemant"
    ]
   },
   {
@@ -121,6 +120,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NoneType\n",
+    "\n",
+    "- Python has a placeholder object called None."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -190,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
