--- a/01 - Object and Data Structure Basics/04 - Lists.ipynb
+++ b/01 - Object and Data Structure Basics/04 - Lists.ipynb
@@ -22,27 +22,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_list = [1, 2, 3]"
+    "my_list = [1, 2, 3]\n",
+    "l2 = [0] * 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[0, 0, 0]\n"
+     ]
     }
    ],
    "source": [
-    "my_list"
+    "print(my_list)\n",
+    "print(l2)"
    ]
   },
   {
@@ -829,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
