07 - Small changes in project

--- a/07 - Tic Tac Toe Project/Tic Tac Toe Project.ipynb
+++ b/07 - Tic Tac Toe Project/Tic Tac Toe Project.ipynb
@@ -160,18 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    |     |    \n",
+      " X  |  O  |    \n",
       "--- | --- | ---\n",
-      "    |     |    \n",
+      "    |  O  |  O \n",
       "--- | --- | ---\n",
-      "    |     |     \n"
+      " X  |  X  |  X  \n",
+      "Congratulations! You have won the game!\n",
+      "If you watn to play again, please enter 'Yes', otherwise press any key.\n"
      ]
     }
    ],
